# sendkit-python

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
src/sendkit/: __init__.py  client.py  emails.py  errors.py
tests/: test_sendkit.py
