[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sendkit"
version = "1.0.0"
description = "Python SDK for the SendKit email API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["sendkit", "email", "api", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://sendkit.com"
Repository = "https://github.com/sendkitdev/sendkit-python"
Issues = "https://github.com/sendkitdev/sendkit-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
